fix: close overlay outside overlay-content, set overflow heigth

--- a/src/app/main-content/channel/channel.component.scss
+++ b/src/app/main-content/channel/channel.component.scss
@@ -79,6 +79,8 @@ h1 {
 }
 
 .members {
+    max-height: 65vh;
+    overflow-y: scroll;
     @include dFlex($jc: flex-start, $ai: flex-start, $fd: column, $g: 16px);
     padding: 20px;
 }
